Enh: Auto contrast text color for other components, and add `--hh-{bs-color}-contrast` CSS variables (see MIGRATE-BS5.md) https://github.com/humhub/humhub-internal/issues/878

--- a/static/scss/_datepicker.scss
+++ b/static/scss/_datepicker.scss
@@ -49,6 +49,7 @@
     .ui-widget-content .ui-state-active,
     .ui-widget-header .ui-state-active {
         border: 1px solid var(--bs-accent) !important;
-        background: lighten($accent, 25%) !important;
+        background: var(--accent) !important;
+        color: var(--hh-accent-contrast) !important;
     }
 }
