--- a/static/scss/_nav.scss
+++ b/static/scss/_nav.scss
@@ -133,7 +133,7 @@
                 }
 
                 a {
-                    color: var(--hh-text-color-contrast);
+                    color: var(--hh-primary-contrast);
                     font-weight: 400;
                     font-size: 13px;
                     padding: 4px 15px;
