--- a/static/scss/_topbar.scss
+++ b/static/scss/_topbar.scss
@@ -213,7 +213,7 @@
         }
 
         a:not(.btn) {
-            color: var(--hh-text-color-contrast);
+            color: var(--hh-primary-contrast);
         }
 
         .caret {
